module12/httpserver/httpserver-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpserver
spec:
  gateways:
    - httpserver
  hosts:
    - lml-cncamp.izaodao.com
  http:
    - match:
      - uri:
          exact: "/httpserver/healthz"
          rewrite:
            uri: "/healthz"
      route:
        - destination:
            host: httpserver.httpserver.svc.cluster.local
            port:
              number: 9090
    - route:
        - destination:
            host: httpserver.httpserver.svc.cluster.local
            port:
              number: 9090
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpserver
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - lml-cncamp.izaodao.com
      port:
        name: http
        number: 80
        protocol: HTTP
